force-app/main/default/objects/MDMRegRequestCustomer__c/MDMRegRequestCustomer__c.object-meta.xml
<CustomObject>
    <label>MDM 고객 등록 및 수정 요청</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>MDMRegRequestCustomer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>