force-app/main/default/objects/MDMRegRequestCustomer__c/fields/IsSelf_PV_HKUNNR__c.field-meta.xml
<CustomField>
    <fullName>IsSelf_PV_HKUNNR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSelf_PV_HKUNNR</label>
    <type>Checkbox</type>
</CustomField>