force-app/main/default/objects/MDMRegRequestCustomer__c/fields/opcode__c.field-meta.xml
<CustomField>
    <fullName>opcode__c</fullName>
    <label>opcode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>