force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PROCID__c.field-meta.xml
<CustomField>
    <fullName>PROCID__c</fullName>
    <label>PROCID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>