force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_ADMINMA__c.field-meta.xml
<CustomField>
    <fullName>PV_ADMINMA__c</fullName>
    <label>PV_ADMINMA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>