force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_ADRES_ROADADDR1__c.field-meta.xml
<CustomField>
    <fullName>PV_ADRES_ROADADDR1__c</fullName>
    <label>PV_ADRES_ROADADDR1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>