force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_ADRES_ROADMGMTNO__c.field-meta.xml
<CustomField>
    <fullName>PV_ADRES_ROADMGMTNO__c</fullName>
    <label>PV_ADRES_ROADMGMTNO</label>
    <length>40</length>
    <type>Text</type>
</CustomField>