force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_ADRES_SEQ__c.field-meta.xml
<CustomField>
    <fullName>PV_ADRES_SEQ__c</fullName>
    <label>PV_ADRES_SEQ</label>
    <length>10</length>
    <type>Text</type>
</CustomField>