force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_ADRES_ZIPCODE__c.field-meta.xml
<CustomField>
    <fullName>PV_ADRES_ZIPCODE__c</fullName>
    <label>PV_ADRES_ZIPCODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>