force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_AKONT_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_AKONT_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>조정계정
GroupId : SKB1_D</description>
    <label>PV_AKONT_lu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MDMReferenceCode__c.GROUPID__c</field>
            <operation>equals</operation>
            <value>SKB1_D</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipLabel>MDMRegRequestCustomer (PV_AKONT_lu)</relationshipLabel>
    <relationshipName>MDMRegRequestCustomer_PV_AKONT</relationshipName>
    <type>Lookup</type>
</CustomField>