force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_AMOUNTCOL__c.field-meta.xml
<CustomField>
    <fullName>PV_AMOUNTCOL__c</fullName>
    <label>PV_AMOUNTCOL</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>