force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_BIZPLCODE__c.field-meta.xml
<CustomField>
    <fullName>PV_BIZPLCODE__c</fullName>
    <label>PV_BIZPLCODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>