force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_BLCKYN__c.field-meta.xml
<CustomField>
    <fullName>PV_BLCKYN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>사용중지</description>
    <label>PV_BLCKYN</label>
    <type>Checkbox</type>
</CustomField>