force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_BUSAB__c.field-meta.xml
<CustomField>
    <fullName>PV_BUSAB__c</fullName>
    <label>PV_BUSAB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <default>true</default>
                <label>일반영업</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>계약영업</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>구매대행</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>