force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_CESSION_KZ__c.field-meta.xml
<CustomField>
    <fullName>PV_CESSION_KZ__c</fullName>
    <description>고객상태
GroupId : TCESSION</description>
    <label>PV_CESSION_KZ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <default>true</default>
                <label>신규점(Open)</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>기존점(정상처)</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>기존점(무회입처)</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>기존점(무매출처)</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>기존점(출고정지)</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>중단점</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>기존점(무매출/무회입)</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>기존점(심사관리)</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>중단점(회입관리)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>