force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_CHARGECUST__c.field-meta.xml
<CustomField>
    <fullName>PV_CHARGECUST__c</fullName>
    <label>PV_CHARGECUST</label>
    <length>10</length>
    <type>Text</type>
</CustomField>