force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_CHARGECUST_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_CHARGECUST_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PV_CHARGECUST_lu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.CustomerType__c</field>
            <operation>equals</operation>
            <value>본점, 판매처</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>MDMRegRequestCustomer_PV_CHARGECUST</relationshipName>
    <type>Lookup</type>
</CustomField>