force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_CLOSEDT__c.field-meta.xml
<CustomField>
    <fullName>PV_CLOSEDT__c</fullName>
    <label>PV_CLOSEDT</label>
    <type>Date</type>
</CustomField>