force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_COMMRATE__c.field-meta.xml
<CustomField>
    <fullName>PV_COMMRATE__c</fullName>
    <label>PV_COMMRATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>