force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_CRMNO__c.field-meta.xml
<CustomField>
    <fullName>PV_CRMNO__c</fullName>
    <label>PV_CRMNO</label>
    <length>18</length>
    <type>Text</type>
</CustomField>