force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_CUHR1__c.field-meta.xml
<CustomField>
    <fullName>PV_CUHR1__c</fullName>
    <label>PV_CUHR1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3171-001</fullName>
                <label>전문점_농산_농산</label>
            </value>
            <value>
                <fullName>3172-001</fullName>
                <label>전문점_수산_수산</label>
            </value>
            <value>
                <fullName>3173-001</fullName>
                <label>전문점_축산_축산</label>
            </value>
            <value>
                <fullName>3174-001</fullName>
                <label>전문점_가공_가공</label>
            </value>
            <value>
                <fullName>3175-001</fullName>
                <label>수출_로컬수출_로컬수출</label>
            </value>
            <value>
                <fullName>3176-001</fullName>
                <label>수출_직수출_직수출</label>
            </value>
            <value>
                <fullName>3177-001</fullName>
                <label>계열사_제일제당_제일제당</label>
            </value>
            <value>
                <fullName>3178-001</fullName>
                <label>계열사_제일제당_씨푸드</label>
            </value>
            <value>
                <fullName>3179-001</fullName>
                <label>계열사_제일제당_영우냉동식품</label>
            </value>
            <value>
                <fullName>3180-001</fullName>
                <label>계열사_푸드빌_뚜레쥬르</label>
            </value>
            <value>
                <fullName>3181-001</fullName>
                <label>계열사_푸드빌_투썸</label>
            </value>
            <value>
                <fullName>3182-001</fullName>
                <label>계열사_푸드빌_빕스</label>
            </value>
            <value>
                <fullName>3183-001</fullName>
                <label>계열사_푸드빌_외식</label>
            </value>
            <value>
                <fullName>3184-001</fullName>
                <label>계열사_푸드빌_엔시티</label>
            </value>
            <value>
                <fullName>3185-001</fullName>
                <label>계열사_푸드빌_컨세션</label>
            </value>
            <value>
                <fullName>3186-001</fullName>
                <label>계열사_대한통운_대한통운</label>
            </value>
            <value>
                <fullName>3187-001</fullName>
                <label>계열사_CGV_CGV</label>
            </value>
            <value>
                <fullName>3188-001</fullName>
                <label>계열사_E&amp;M_E&amp;M</label>
            </value>
            <value>
                <fullName>3189-001</fullName>
                <label>계열사_올리브영_올리브영</label>
            </value>
            <value>
                <fullName>3190-001</fullName>
                <label>계열사_오쇼핑_오쇼핑</label>
            </value>
            <value>
                <fullName>3101-001</fullName>
                <label>외식대리점_상온_상온</label>
            </value>
            <value>
                <fullName>3102-001</fullName>
                <label>외식대리점_저온_저온</label>
            </value>
            <value>
                <fullName>3103-001</fullName>
                <label>외식대리점_해피스푼_해피스푼</label>
            </value>
            <value>
                <fullName>3104-001</fullName>
                <label>외식유통점_식당점_한분식</label>
            </value>
            <value>
                <fullName>3105-001</fullName>
                <label>외식유통점_식당점_중식</label>
            </value>
            <value>
                <fullName>3106-001</fullName>
                <label>외식유통점_식당점_양식</label>
            </value>
            <value>
                <fullName>3107-001</fullName>
                <label>외식유통점_식당점_일식</label>
            </value>
            <value>
                <fullName>3108-001</fullName>
                <label>외식유통점_식자재마트_기업형</label>
            </value>
            <value>
                <fullName>3109-001</fullName>
                <label>외식유통점_식자재마트_개별형</label>
            </value>
            <value>
                <fullName>3110-001</fullName>
                <label>외식직거래_FC_FC)레스토랑</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>