force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_CUHR1_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_CUHR1_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>고객분류
GroupId : CUSTOMERROUTE</description>
    <label>PV_CUHR1_lu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MDMReferenceCode__c.GROUPID__c</field>
            <operation>equals</operation>
            <value>CUSTOMERROUTE</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipLabel>MDMRegRequestCustomer (PV_CUHR1_lu)</relationshipLabel>
    <relationshipName>MDMRegRequestCustomer_PV_CUHR1</relationshipName>
    <type>Lookup</type>
</CustomField>