force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_DELAVG__c.field-meta.xml
<CustomField>
    <fullName>PV_DELAVG__c</fullName>
    <label>PV_DELAVG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>