force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_DELICUST__c.field-meta.xml
<CustomField>
    <fullName>PV_DELICUST__c</fullName>
    <label>PV_DELICUST</label>
    <length>10</length>
    <type>Text</type>
</CustomField>