force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_DELIGROUP__c.field-meta.xml
<CustomField>
    <fullName>PV_DELIGROUP__c</fullName>
    <label>PV_DELIGROUP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>통합배송그룹</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>FC배송그룹</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>TC배송그룹</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>FV배송그룹</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>