force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_DELIGROUP_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_DELIGROUP_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>배송그룹
GroupId : DELIGROUP</description>
    <label>PV_DELIGROUP_lu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MDMReferenceCode__c.GROUPID__c</field>
            <operation>equals</operation>
            <value>DELIGROUP</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipLabel>MDMRegRequestCustomer (PV_DELIGROUP_lu)</relationshipLabel>
    <relationshipName>MDMRegRequestCustomer_PV_DELIGROUP</relationshipName>
    <type>Lookup</type>
</CustomField>