force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_DEPOSIT__c.field-meta.xml
<CustomField>
    <fullName>PV_DEPOSIT__c</fullName>
    <label>PV_DEPOSIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>