force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_DEPOSITF__c.field-meta.xml
<CustomField>
    <fullName>PV_DEPOSITF__c</fullName>
    <label>PV_DEPOSITF</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>