force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_DEPOSITYN__c.field-meta.xml
<CustomField>
    <fullName>PV_DEPOSITYN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PV_DEPOSITYN</label>
    <type>Checkbox</type>
</CustomField>