force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_DROPSIZEFC__c.field-meta.xml
<CustomField>
    <fullName>PV_DROPSIZEFC__c</fullName>
    <label>PV_DROPSIZEFC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>