force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_DSTRHISTREGYN__c.field-meta.xml
<CustomField>
    <fullName>PV_DSTRHISTREGYN__c</fullName>
    <label>PV_DSTRHISTREGYN</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>유통업자</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>소매업자</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>수출</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>