force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_ENTERCOND1__c.field-meta.xml
<CustomField>
    <fullName>PV_ENTERCOND1__c</fullName>
    <label>PV_ENTERCOND1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>제한없음</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>1톤 이하 가능</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>2.5톤 저상 이하 가능</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>2.5톤 이하 가능</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>3.5톤 저상 이하 가능</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>3.5톤 이하 가능</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>5톤 저상 이하 가능</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>5톤 이하 가능</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>