force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_ESALESFC__c.field-meta.xml
<CustomField>
    <fullName>PV_ESALESFC__c</fullName>
    <label>PV_ESALESFC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>