force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_ESALESPROFITRATE__c.field-meta.xml
<CustomField>
    <fullName>PV_ESALESPROFITRATE__c</fullName>
    <label>PV_ESALESPROFITRATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>