force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_ETCSALESFEE__c.field-meta.xml
<CustomField>
    <fullName>PV_ETCSALESFEE__c</fullName>
    <label>PV_ETCSALESFEE</label>
    <type>TextArea</type>
</CustomField>