force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_EXAMYN__c.field-meta.xml
<CustomField>
    <fullName>PV_EXAMYN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PV_EXAMYN</label>
    <type>Checkbox</type>
</CustomField>