force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_FDCTINFO__c.field-meta.xml
<CustomField>
    <fullName>PV_FDCTINFO__c</fullName>
    <label>PV_FDCTINFO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>