force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_FDGRV__c.field-meta.xml
<CustomField>
    <fullName>PV_FDGRV__c</fullName>
    <label>PV_FDGRV</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C1</fullName>
                <label>거래처코드공통</label>
            </value>
            <value>
                <fullName>V1</fullName>
                <label>협력사공통</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>