force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_FDINFO__c.field-meta.xml
<CustomField>
    <fullName>PV_FDINFO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PV_FDINFO</label>
    <type>Checkbox</type>
</CustomField>