force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_FDNOTICE__c.field-meta.xml
<CustomField>
    <fullName>PV_FDNOTICE__c</fullName>
    <label>PV_FDNOTICE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>