force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_FDREQD__c.field-meta.xml
<CustomField>
    <fullName>PV_FDREQD__c</fullName>
    <label>PV_FDREQD</label>
    <type>Date</type>
</CustomField>