force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_FDREQT__c.field-meta.xml
<CustomField>
    <fullName>PV_FDREQT__c</fullName>
    <label>PV_FDREQT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>