force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_FITYP__c.field-meta.xml
<CustomField>
    <fullName>PV_FITYP__c</fullName>
    <label>PV_FITYP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>일반과세자</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>간이과세자</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>면세사업자</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>휴업자</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>비영리법인,단체·국가기관</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>폐업자</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>기타유형</label>
            </value>
            <value>
                <fullName>91</fullName>
                <label>미등록사업자(해외건수)</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>오류(일반)사용중</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>