force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_GFORM__c.field-meta.xml
<CustomField>
    <fullName>PV_GFORM__c</fullName>
    <label>PV_GFORM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>개인</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>영리법인</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>비영리법인</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>