force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_GSALESFC__c.field-meta.xml
<CustomField>
    <fullName>PV_GSALESFC__c</fullName>
    <label>PV_GSALESFC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>