force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_HDOFFICEYN__c.field-meta.xml
<CustomField>
    <fullName>PV_HDOFFICEYN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PV_HDOFFICEYN</label>
    <type>Checkbox</type>
</CustomField>