force-app/main/default/objects/MDMRegRequestCustomer__c/fields/PV_HKUNNR__c.field-meta.xml
<CustomField>
    <fullName>PV_HKUNNR__c</fullName>
    <label>PV_HKUNNR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>